[package]
name = "weatherapp"
version = "2.0.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "High-performance weather API server built with Rust"
license = "MIT"

[dependencies]
actix-web = { version = "4", features = ["rustls"] }
actix-files = "0.6"
dotenv = "0.15"
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
chrono = { version = "0.4", features = ["serde"] }
urlencoding = "2.1"
env_logger = "0.10"

[profile.dev]
opt-level = 1
debug = 2

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true